# chainsaw-core

./: .gitleaks.toml  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  go.mod  go.sum
agenticux/: catalog.go
attestation/: attestation.go  attestation_test.go
blobstore/: blobstore.go  factory.go  file_blobstore.go  file_blobstore_test.go  s3_blobstore.go
cache/: cache.go  factory.go  memory_cache.go  memory_cache_test.go  negative_cache.go  negative_cache_test.go  redis_cache.go
capability/: npm_scanner.go  npm_scanner_test.go  scanner.go  types.go
cli/: admission_soak.go  ansi_other.go  ansi_windows.go  audit.go  audit_export.go  audit_export_test.go  auth.go  auth_browser.go  auth_browser_test.go  auth_client.go  auth_client_test.go  auth_sso.go  auth_test.go  bundle.go  bundle_test.go  cargo_credentials.go  cargo_credentials_test.go  cfgserverurl_env_test.go  cfgtoken_verbose_test.go  client.go  client_test.go  codeowners.go  codeowners_test.go  coverage.go  deps.go  doctor.go  doctor_attest_test.go  doctor_bypass.go  doctor_bypass_test.go  doctor_logs.go  doctor_logs_test.go  doctor_offline.go  doctor_strict.go  doctor_test.go  doctor_upgrade.go  doctor_upgrade_test.go  doctor_verify_hook.go  doctor_verify_hook_test.go  exception.go  exception_test.go  (+58 more)
codeowners/: parser.go  parser_test.go  sync.go  sync_test.go
codesmell/: bench_test.go  doc.go  entropy.go  filter.go  filter_test.go  minified.go  native.go  patterns.go  (+4 more)
testing/fixtures/typosquat/pypi_internal_shadow/: README.md  expected.json  pyproject.toml
(+582 files in other folders)
